@@ -1,3 +1,13 @@
+2006-01-18  Christian Persch  <chpe@cvs.gnome.org>
+
+	* src/ephy-statusbar.c: (create_caret_indicator),
+	(ephy_statusbar_init), (ephy_statusbar_new),
+	(ephy_statusbar_set_caret_mode):
+	* src/ephy-statusbar.h:
+	* src/ephy-window.c: (browse_with_caret_notifier):
+
+	Add caret mode indicator UI. Bug #145581.
+
 2006-01-18  Peter Harvey  <peter.a.harvey@gmail.com>
 
 	* src/bookmarks/ephy-bookmarks-menu.c
